feat: 코드 스타일 개선 반영 (#67)
* refactor: Optional null 예외 처리 (#43)

* refactor: 반환 인스턴스 할당 제거 (#43)

* refactor: toList 변환 (#43)