@@ -46,15 +46,15 @@ public class EquipmentGymService {
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
 
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGym.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGym.size(), equipmentResponses);
     }
 
     /*
     EquipmentGym의 Condition을 수정
      */
     public void updateCondition(Long equipmentGymId, Condition condition) {
-        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).get();
+        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId)
+                .orElseThrow(IllegalArgumentException::new);
         equipmentGym.updateCondition(condition);
     }
 
@@ -62,7 +62,8 @@ public class EquipmentGymService {
     equipmentGym 삭제
      */
     public void deleteEquipmentGym(Long equipmentGymId) {
-        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).get();
+        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId)
+                .orElseThrow(IllegalArgumentException::new);
         equipmentGymRepository.delete(equipmentGym);
     }
 
@@ -74,13 +75,12 @@ public class EquipmentGymService {
         List<EquipmentGym> allByGymAndPurpose = allByGym
                 .stream()
                 .filter(equipmentGym -> equipmentGym.getEquipment().getPurpose().equals(purpose))
-                .collect(Collectors.toList());
+                .toList();
 
         List<EquipmentResponse> equipmentResponses = allByGymAndPurpose.stream()
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGymAndPurpose.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGymAndPurpose.size(), equipmentResponses);
     }
 
     /*
@@ -91,14 +91,13 @@ public class EquipmentGymService {
         List<EquipmentGym> allByGymAndEquipment = allByGym
                 .stream()
                 .filter(equipmentGym -> equipmentGym.getEquipment().equals(equipment))
-                .collect(Collectors.toList());
+                .toList();
 
         List<EquipmentResponse> equipmentResponses = allByGymAndEquipment.stream()
                 .map(EquipmentResponse::new)
                 .collect(Collectors.toList());
 
-        EquipmentGymListResponse response = new EquipmentGymListResponse(gym.getName(), allByGymAndEquipment.size(), equipmentResponses);
-        return response;
+        return new EquipmentGymListResponse(gym.getName(), allByGymAndEquipment.size(), equipmentResponses);
     }
 
     /*
